Fix modernizer violations
Replace legacy JDK APIs flagged by modernizer across provisio-model,
provisio-core, provisio-maven, provisio-maven-plugin and provisio-its:

- Collections.empty*/singleton* -> List.of()/Map.of()/Set.of()
- Collections.sort(list)        -> list.sort(Comparator.naturalOrder())
- new File(String)              -> Path.of(String).toFile()
- new FileInputStream/OutputStream -> Files.newInputStream/newOutputStream
- Paths.get(String)             -> Path.of(String)

new File(File, String) is NOT replaced with Path.resolve(String):
File(File, String) treats a root-anchored child as relative to the
parent, while Path.resolve discards the parent. Assembly descriptors
rely on this (<artifactSet to="/lib"/> means lib inside the runtime
directory), so joins go through the new ProvisioUtils.resolve helper,
which preserves File semantics.

The reactor is now modernizer-clean, so failOnViolations can be
flipped to true in a follow-up.